fixed the mobile menu on IE

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,31 @@
+/* These animations are at the top of the CSS files because they wouldn't work in IE if they were further down. CURSE YOU IE!!! */
+@keyframes checked-anim {
+    100% {
+        width: 150px;
+        height: 300px;
+        border-radius: 0;
+    }
+}
+
+@keyframes not-checked-anim {
+    0% {
+        width: 150px;
+        height: 300px;
+    }
+}
+
+@keyframes show-links {
+    0% {
+        opacity: 0;
+    }
+    90% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 /* Overall Styles */
 body {
     background: #ffffff !important;
@@ -1392,66 +1420,18 @@ textarea {
 /* Changing the layout to mobile/tablet friendly */
 /* Switches to mobile menu */
 @media only screen and (max-width: 1000px) {
+    /* Styles for the mobile nav */
+    /* The animations for the mobile menu are at the top of the CSS file. They wouldn't work in IE if they were down here. CURSE YOU IE!!! */
     .mobilenav {
-        display: inline;
+        display: block;
         z-index: 9999;
         position: fixed;
         right: 0;
     }
 
-    /* Styles for the mobile nav */
-    @keyframes checked-anim {
-        100% {
-            width: 150px;
-            height: 300px;
-            border-radius: 0;
-        }
-    }
-    @keyframes not-checked-anim {
-        0% {
-            width: 150px;
-            height: 300px;
-        }
-    }
-    @keyframes show-links {
-        0% {
-            opacity: 0;
-        }
-        90% {
-            opacity: 0;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-
-    @-ms-keyframes checked-anim {
-        100% {
-            width: 150px;
-            height: 300px;
-            border-radius: 0;
-        }
-    }
-    @-ms-keyframes not-checked-anim {
-        0% {
-            width: 150px;
-            height: 300px;
-        }
-    }
-    @-ms-keyframes show-links {
-        0% {
-            opacity: 0;
-        }
-        90% {
-            opacity: 0;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
     .div li, .div li a {
         margin: 75px 0 -55px 0;
-        color: #ffffff;
+        color: red;
         font: 14pt "Roboto", sans-serif;
         font-weight: 700;
         line-height: 1.8;
@@ -1461,12 +1441,14 @@ textarea {
         outline: 0;
         display: none;
         margin-left: 60px;
-        animation: show-links .75s both;
-        -ms-animation: show-links .75s both;
+        animation: show-links 1s both;
     }
+
     .div li {
         width: 230px;
-        text-indent: 56px;}
+        text-indent: 56px;
+    }
+    
     a:focus {
         display: block;
         color: #333;
@@ -1485,20 +1467,24 @@ textarea {
         cursor: pointer;
         z-index: 999999;
     }
+
     #trigger {
         height: 25px;
         background: none;
     }
+
     #burger:before {
         content: " ";
         top: 10px;
         right: 0;
     }
+
     #burger:after {
         content: " ";
         top: 20px;
         right: 0;
     }
+
     #menu-toggle:checked + #trigger + #burger {
         top: 35px;
         transform: rotate(180deg);
@@ -1512,6 +1498,7 @@ textarea {
         transform: rotate(45deg) translateX(-5px);
         transition: transform .2s ease;
     }
+
     #menu-toggle:checked + #trigger + #burger:after {
         width: 20px;
         top: -9px;
@@ -1519,33 +1506,37 @@ textarea {
         transform: rotate(-45deg) translateX(-5px);
         transition: transform .2s ease;
     }
+
     #menu {
         position: absolute;
         right: 0;
-        margin: 0; padding: 0;
+        margin: 0; 
+        padding: 0;
         width: 110px;
         height: 110px;
         background-color: #2A5769;
         border-bottom-left-radius: 100%;
         box-shadow: 0 2px 5px rgba(0,0,0,0.26);
         animation: not-checked-anim .2s both;
-        -ms-animation: not-checked-anim .2s both;
         transition: .2s;
         z-index: 99999;
     }
+
     .div {
         right: 0;
         position: absolute;
         height: auto;
         width: auto;
     }
+
     #menu-toggle:checked + #trigger + #burger + #menu {
         animation: checked-anim 1s ease both;
-        -ms-animation: checked-anim 1s ease both;
     }
+
     #menu-toggle:checked + #trigger ~ #menu > .div li, .div li a {
         display: block;
     }
+
     [type="checkbox"]:not(:checked), [type="checkbox"]:checked {
         display: none;
     }
